# jvm-rust

./: .gitignore  Cargo.toml  README.md
cp/: Cargo.toml
cp/src/: attr.rs  class_file.rs  cp.rs  entry.rs  io_utils.rs  lib.rs
err/: Cargo.toml
err/src/: lib.rs
rp/src/: lib.rs
src/: attr.rs  cp.rs  entry.rs  heap.rs  main.rs  op.rs  rp.rs  runtime.rs  utils.rs
src/heap/: class.rs  desc.rs  desc2.rs  loader.rs  misc.rs  mod.rs  natives.rs
src/ins/: cmp.rs  cons.rs  conv.rs  ctl.rs  load.rs  math.rs  mod.rs  other.rs  refs.rs  stack.rs  store.rs
src/natives/: class.rs  debug.rs  io.rs  mod.rs  object.rs  security.rs  sun.rs  system.rs  thread.rs
src/oop/: mod.rs
src/runtime/: frame.rs  misc.rs  mod.rs  thread.rs  vm.rs
test/: Debug.java  FibonacciTest.java  Gauss.java  HelloWorld.java  InvokeTest.java  MultiDimensionalArray.java  MyObject.java  Test.java
